# net-vision-microservice

./: .env.example  alembic.ini  docker-compose.yml  pyproject.toml
docker/client/: Dockerfile
docker/server/: Dockerfile
net_vision_microservice/client/: __main__.py
net_vision_microservice/server/: __main__.py
net_vision_microservice/server/api/: setup.py
net_vision_microservice/server/api/api_v1/: exception.py
net_vision_microservice/server/api/api_v1/endpoints/: entry.py  setup.py
net_vision_microservice/server/api/api_v1/responses/: __init__.py  entry.py
net_vision_microservice/server/core/: event.py
net_vision_microservice/server/database/: factory.py  holder.py
net_vision_microservice/server/database/alembic/: env.py
net_vision_microservice/server/database/alembic/versions/: 20230712-212212_83d2043397a1_initial.py
net_vision_microservice/server/database/models/: __init__.py  entry.py  main.py
net_vision_microservice/server/database/repositories/: entry.py  main.py
net_vision_microservice/server/dto/: __init__.py  entry.py
net_vision_microservice/server/exceptions/: __init__.py  entry.py
net_vision_microservice/server/types/: __init__.py  entry.py  setting.py
