[tool.poetry]
name = "net-vision-microservice"
version = "0.1.0"
description = ""
authors = ["Danila Novichikhin"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
alembic = "^1.11.1"
fastapi = "^0.95.2"
uvicorn = "^0.22.0"
uuid6 = "^2023.5.2"
httpx = "^0.24.1"
python-dotenv = "^1.0.0"
asyncpg = "^0.28.0"
psycopg2-binary = "^2.9.6"
gunicorn = "^20.1.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
